[package]
name = "soracom-sdk-rs"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "2.1"
chrono = {version= "0.4", features = ["serde"]}
